fix: not wrapped skills items section

--- a/src/Components/About/Skills/Skills.css
+++ b/src/Components/About/Skills/Skills.css
@@ -1,36 +1,37 @@
 .skills-area {
-    font-weight: 200;
-    margin-top: 10px;
+  font-weight: 200;
+  margin-top: 10px;
 }
 
 .skills-cards {
-    margin-top: 10px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  margin-top: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 .skills-card {
-    margin: 0 .5em;
+  margin: 10px 0.5em;
 }
 
 .skill-img {
-    width: 1.5em;
-    height: 1.5em;
+  width: 1.5em;
+  height: 1.5em;
 }
 
 .skill-item {
-    font-weight: 200;
-    font-size: 10px;
+  font-weight: 200;
+  font-size: 10px;
 }
 
 @media screen and (min-width: 768px) {
-    .skills-card {
-        margin: 0 1em;
-    }
+  .skills-card {
+    margin: 0 1em;
+  }
 
-    .skill-img {
-        width: 2.5em;
-        height: 2.5em;
-    }
+  .skill-img {
+    width: 2.5em;
+    height: 2.5em;
+  }
 }
